--- a/.env
+++ b/.env
@@ -1,18 +1,19 @@
 APP_NAME=Laravel
 
 APP_KEY=96af714a6cdc4b3d8a29959dc7ff1d5f
-APP_ENV=local
-APP_DEBUG=true
+APP_ENV=production
+APP_DEBUG=false
 APP_URL=https://www.myboxprinting.com/
+ASSET_URL=https://www.myboxprinting.com/
 LOG_CHANNEL=stack
 
 DB_CONNECTION=mysql
 
-DB_HOST=127.0.0.1
+DB_HOST=localhost
 DB_PORT=3306
-DB_DATABASE=mybox
-DB_USERNAME=root
-DB_PASSWORD=
+DB_DATABASE=your_hostinger_database_name
+DB_USERNAME=your_hostinger_db_username
+DB_PASSWORD=your_hostinger_db_password
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
