--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,37 @@ Homestead.yaml
 npm-debug.log
 yarn-error.log
 .DS_Store
+
+# Cache files
+/bootstrap/cache/*
+!/bootstrap/cache/.gitignore
+/storage/framework/cache/*
+!/storage/framework/cache/.gitignore
+/storage/framework/sessions/*
+!/storage/framework/sessions/.gitignore
+/storage/framework/views/*
+!/storage/framework/views/.gitignore
+/storage/logs/*
+!/storage/logs/.gitignore
+
+# Backup files
+*.backup
+*.bak
+*.old
+
+# IDE files
+.idea/
+.vscode/
+*.swp
+*.swo
+*~
+
+# OS files
+.DS_Store
+Thumbs.db
+desktop.ini
+
+# Temporary files
+*.tmp
+*.temp
+fix_recaptcha.php
